# future-fstrings

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  azure-pipelines.yml  future_fstrings.py  requirements-dev.txt  setup.cfg  setup.py  tox.ini
testing/: fix_coverage.py  remove_pycdir.py
tests/: future_fstrings_test.py
