[metadata]
name = future_fstrings
version = 1.2.0
description = A backport of fstrings to python<3.6
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asottile/future-fstrings
author = Anthony Sottile
author_email = asottile@umich.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = future_fstrings
install_requires =
    tokenize-rt>=3; python_version<"3.6"
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*

[options.extras_require]
rewrite = tokenize-rt>=3

[options.entry_points]
console_scripts =
    future-fstrings-show=future_fstrings:main

[bdist_wheel]
universal = True
